--- a/app/apps/main/templates/melding/aanmaken.html
+++ b/app/apps/main/templates/melding/aanmaken.html
@@ -26,6 +26,8 @@
             {{ form.melding|render_rotterdam_formulier }}
             {{ form.straatnaam|render_rotterdam_formulier }}
             {{ form.huisnummer|render_rotterdam_formulier }}
+            {{ form.huisletter|render_rotterdam_formulier }}
+            {{ form.toevoeging|render_rotterdam_formulier }}
             {{ form.wijknaam|render_rotterdam_formulier }}
             {{ form.buurtnaam|render_rotterdam_formulier }}
             {{ form.rd_x|render_rotterdam_formulier }}
