--- a/app/apps/main/templates/melding/part_locatie_aanpassen.html
+++ b/app/apps/main/templates/melding/part_locatie_aanpassen.html
@@ -100,7 +100,7 @@
                                 </h3>
                                 <div class="card">
                                     <p>
-                                        {{ melding.locaties_voor_melding.0.straatnaam }} {{ melding.locaties_voor_melding.0.huisnummer }}{{ melding.locaties_voor_melding.0.huisletter }}
+                                        {{ melding.locaties_voor_melding.0.straatnaam }} {{ melding.locaties_voor_melding.0.huisnummer }}{{ melding.locaties_voor_melding.0.huisletter }} {{ melding.locaties_voor_melding.0.toevoeging }}
                                         <br>
                                         {{ melding.locaties_voor_melding.0.wijknaam }} {{ melding.locaties_voor_melding.0.buurtnaam }}
                                         <br>
