--- a/app/apps/main/templates/widgets/checkbox_options_grouped.html
+++ b/app/apps/main/templates/widgets/checkbox_options_grouped.html
@@ -2,7 +2,9 @@
 {% with id=widget.attrs.id %}
     <div {% if id %}id="{{ id }}"{% endif %}
          {% if widget.attrs.class %}class="{{ widget.attrs.class }}"{% endif %}>
-        <div {% if widget.attrs.has_group %}class="container__details-list"{% endif %}>
+        <div {% if widget.attrs.has_group %}class="container__details-list {% if widget.optgroups|length < 4 %}cols{{ widget.optgroups|length }}{% else %}cols4{% endif %}
+             "
+             {% endif %}>
             {% for group, options, index in widget.optgroups %}
                 {% if group %}
                     {% with group_id="foldout_group-"|add:group|slugify %}
