--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -327,8 +327,8 @@ textarea {
     }
 }
 
-.form-check-input,
-.form-radio-input {
+input.form-check-input,
+input.form-radio-input {
     @include form-check-input();
 }
 
