--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -29,9 +29,16 @@
                   data-controller="taakstartenformulier"
                   data-turbo-frame="_top"
                   data-taakstartenformulier-target="formTaakStarten"
+                  data-taakstartenformulier-taaktypes="{{ taaktype_choices|json_encode }}"
                   enctype="multipart/form-data"
                   novalidate>
                 {% csrf_token %}
+                <div class="form-control__with-helptext">
+                    <div class="form-row">
+                        <label>Selecteer een afdeling/categorie</label>
+                        <div>{{ form.categorie }}</div>
+                    </div>
+                </div>
                 <div class="form-control__with-helptext">
                     <div class="form-row">
                         <label>Selecteer een taak</label>
