Filtering responsive styling

--- a/app/apps/release_notes/templates/public/release_note_detail.html
+++ b/app/apps/release_notes/templates/public/release_note_detail.html
@@ -6,7 +6,7 @@
 {% block body %}
     <turbo-frame id="release_notes" data-turbo-action="advance">
     <div class="page__beheer" data-controller="row-search">
-        <div>
+        <div class="margin-bottom">
             <a href="{% url origine %}" class="link--back" data-turbo-frame="_top">
                 <svg width="25"
                      height="16"
