--- a/app/apps/main/templates/melding/part_informatie_toevoegen.html
+++ b/app/apps/main/templates/melding/part_informatie_toevoegen.html
@@ -10,19 +10,18 @@
                   action="{% url 'informatie_toevoegen' melding_uuid %}"
                   method="post"
                   enctype="multipart/form-data"
-                  data-turbo-frame="_top">
+                  data-turbo-frame="_top"
+                  data-controller="opmerkingformulier"
+                  data-opmerkingformulier-target="formOpmerking">
                 {% csrf_token %}
-                error: {{ error }}
-                form errors: {{ form.errors }}
-                {% if form.errors %}
-                    <div class="alert alert-danger">
-                        <strong>Error:</strong> {{ form.errors }}
-                    </div>
-                {% endif %}
                 {{ form.opmerking|render_rotterdam_formulier }}
                 <div data-controller="bijlagen">{{ form.bijlagen_extra|render_rotterdam_formulier }}</div>
+                <p class="help-block invalid-text"
+                   data-opmerkingformulier-target="errorMessage">...</p>
                 <div class="form-row">
-                    <button type="submit" class="btn btn-secondary">
+                    <button type="submit"
+                            class="btn btn-secondary"
+                            data-action="opmerkingformulier#onSubmit">
                         <span>Toevoegen</span>
                     </button>
                     <button type="reset"
