--- a/app/apps/main/templates/melding/part_informatie_toevoegen.html
+++ b/app/apps/main/templates/melding/part_informatie_toevoegen.html
@@ -17,7 +17,7 @@
                 {{ form.opmerking|render_rotterdam_formulier }}
                 <div data-controller="bijlagen">{{ form.bijlagen_extra|render_rotterdam_formulier }}</div>
                 <p class="help-block invalid-text"
-                   data-opmerkingformulier-target="errorMessage">...</p>
+                   data-opmerkingformulier-target="errorMessage"></p>
                 <div class="form-row">
                     <button type="submit"
                             class="btn btn-secondary"
