Correct use of paragraphs in alerts

--- a/app/apps/context/templates/context/context_form.html
+++ b/app/apps/context/templates/context/context_form.html
@@ -39,7 +39,7 @@
                             </svg>
                         </span>
                         <div>
-                            Let op: het wijzigen van deze rol heeft gevolgen voor alle gebruikers met deze rol.
+                            <p>Let op: het wijzigen van deze rol heeft gevolgen voor alle gebruikers met deze rol.</p>
                             <p>
                                 Let op: De rol kan niet worden verwijderd. Als de bovenstaande gebruikers in een andere rol worden gezet, kan deze rol wel verwijderd worden
                             </p>
