--- a/app/apps/context/templates/context/context_form.html
+++ b/app/apps/context/templates/context/context_form.html
@@ -26,6 +26,7 @@
             <h1>Rol aanmaken</h1>
         {% endif %}
         <div class="grid-container">
+            {% include "snippets/messages.html" %}
             <div class="grid-item">
                 {% if object.profielen_voor_context.all %}
                     <div class="alert alert--warning">
