--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -26,27 +26,7 @@
                  data-detail-url-prefix-value="{{ MOR_CORE_URL_PREFIX }}"
                  data-detail-signalen-value="{{ melding.signalen_voor_melding|json_encode }}">
                 <div class="border-green print-only"></div>
-                {% if messages %}
-                    <div class="alert alert--warning">
-                        <span>
-                            <svg width="32"
-                                 height="32"
-                                 viewBox="0 0 32 32"
-                                 fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600">
-                                </path>
-                            </svg>
-                        </span>
-                        <div>
-                            <ul class="messages">
-                                {% for message in messages %}
-                                    <li {% if message.tags %}class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-                {% endif %}
+                {% include "snippets/messages.html" %}
                 <div class="page__detail">
                     <div>
                         <a href="{% url 'melding_lijst' %}?{{ overview_querystring }}"
