--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -18,6 +18,7 @@
 @import "./components/imageSlider";
 @import "./components/navigation";
 @import "./components/page-beheer";
+@import "./components/page-error";
 @import "./print";
 @import "./components/map";
 @import "./components/tabs";
