--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -55,4 +55,8 @@
     .container__actions & {
         margin-top: 1em;
     }
+
+    .has-page-navigation & {
+        margin-right: 240px;
+    }
 }
