Css-fix alert on detail-page

--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -55,8 +55,10 @@
     .container__actions & {
         margin-top: 1em;
     }
+}
 
-    .has-page-navigation & {
+.has-page-navigation {
+    .detail-content-wrapper > .alert {
         margin-right: 240px;
     }
 }
