--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -27,7 +27,8 @@
                  data-detail-locatie-value="{{ locatie|json_encode }}"
                  data-detail-afbeeldingen-value="{{ bijlagen|json_encode }}"
                  data-detail-url-prefix-value="{{ MOR_CORE_URL_PREFIX }}"
-                 data-detail-signalen-value="{{ melding.signalen_voor_melding|json_encode }}">
+                 data-detail-signalen-value="{{ melding.signalen_voor_melding|json_encode }}"
+                 class="detail-content-wrapper">
                 <div class="border-green print-only"></div>
                 {% include "snippets/messages.html" %}
                 <div class="page__detail">
