Fix typo's, small refactoring errorpages

--- a/app/apps/main/templates/403.html
+++ b/app/apps/main/templates/403.html
@@ -13,7 +13,7 @@
                 <h1 class="h3 block--black">Fout 403 - Verboden</h1>
                 <p class="margin-bottom">Je bent ingelogd, maar je hebt niet genoeg rechten op deze pagina te bekijken.</p>
                 <h3>Relevante links</h3>
-                Hieronder vindt je de belangrijkste links.
+                Hieronder vind je de belangrijkste links.
                 <ul class="list--blocks-horizontal margin-bottom">
                     <li>
                         <a href="{% url 'melding_lijst' %}">Meldingen overzicht</a>
