--- a/app/apps/main/templates/home.html
+++ b/app/apps/main/templates/home.html
@@ -20,9 +20,9 @@
                         <div class="container__details">
                             <h2>Om te beginnen</h2>
                             <p>
-                                Je bent wel ingelogt, maar je account heeft nog wat aandacht nodig om gebruik te maken van PlanR.
+                                Je bent wel ingelogd, maar je account heeft nog wat aandacht nodig om gebruik te kunnen maken van PlanR.
                                 <br>
-                                Hieronder vindt je de instellingen zoals je nu bij ons bekent bent.
+                                Hieronder vind je de instellingen zoals je nu bij ons bekend bent.
                             </p>
                             {% include "auth/rollen_rechten.html" %}
                         </div>
