--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -23,6 +23,7 @@
                     data-action="detail#closeModal"></button>
         </div>
         <div class="modal-body">
+            {% include "snippets/messages.html" %}
             <form action="{% url 'taak_starten' melding.uuid %}"
                   method="post"
                   class="form--horizontal"
@@ -33,6 +34,7 @@
                   enctype="multipart/form-data"
                   novalidate>
                 {% csrf_token %}
+                {{ form.errors }}
                 <div class="form-control__with-helptext">{{ form.categorie|render_rotterdam_formulier }}</div>
                 <div class="form-control__with-helptext">
                     <div class="form-row">
