--- a/app/apps/main/templates/404.html
+++ b/app/apps/main/templates/404.html
@@ -21,7 +21,7 @@
                 <div class="container__answers" id="errorpageContainerAnswers"></div>
             </div>
             <div>
-                <a href="/taken">Naar overzicht</a>
+                <a href="/melding">Naar overzicht</a>
                 <a class="link--whatsapp"
                    id="errorPageWaLink"
                    data-errorValue="PlanR - 404 - gebruiker: {{ request.user }}"
