--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -9,7 +9,7 @@
 {% load render_onderwerp get_bijlagen from melding_tags %}
 {% load json_encode from json_tags %}
 {% block title %}
-    Melding {{ melding.id }} | PlanR
+    Melding {% for signaal in melding.signalen_voor_melding %}{{ signaal.bron_signaal_id }} {% endfor %}| {{ melding.id }} | PlanR
 {% endblock title %}
 {% block body_class %}
     has-page-navigation
