--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -18,7 +18,7 @@
             |
         {% endif %}
     {% endfor %}
-    | {{ melding.id }} | PlanR
+    {{ melding.id }} | PlanR
 {% endblock title %}
 {% block body_class %}
     has-page-navigation
