django 4.2: bulk update gebruikers

--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
@@ -32,7 +32,7 @@
                          xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M17 6H15V15H6V17H15V26H17V17H26V15H17V6Z" fill="#00811f"></path>
                     </svg>
-                    Bulk import
+                    Bulk import/update
                 </a>
                 <a class="btn btn-action" href="{% url 'gebruiker_aanmaken' %}">
                     <svg width="24"
