--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_bulk_import.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_bulk_import.html
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="container__flex">
-            <h1>Bulk import gebruikers</h1>
+            <h1>Bulk import/update gebruikers</h1>
         </div>
         {% if form %}
             <form method="post"
@@ -37,15 +37,19 @@
                         </div>
                         {% if not form.errors and form.cleaned_data.csv_file.valid_rows %}
                             <p>
-                                {{ form.cleaned_data.csv_file.valid_rows|length }} van de {{ form.cleaned_data.csv_file.all_rows|length }} gebruiker
-                                {% if form.cleaned_data.csv_file.all_rows|length > 1 %}s{% endif %}
+                                {{ form.cleaned_data.csv_file.valid_rows|length }} van de {{ form.cleaned_data.csv_file.all_rows|length }}
+                                {% if form.cleaned_data.csv_file.all_rows|length > 1 %}
+                                    gebruikers
+                                {% else %}
+                                    gebruiker
+                                {% endif %}
                                 ,
                                 {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}
                                     kunnen
                                 {% else %}
                                     kan
                                 {% endif %}
-                                worden aangemaakt.
+                                worden aangemaakt of aangepast.
                             </p>
                             <p>Onderstaande gebruikers kunnen worden geïmporteerd:</p>
                             <table>
@@ -55,24 +59,31 @@
                                     <th>achternaam</th>
                                     <th>telefoonnummer</th>
                                     <th>Wordt geïmporteerd</th>
+                                    <th>Wordt aangepast</th>
                                 </thead>
                                 <tbody>
                                     {% for row in form.cleaned_data.csv_file.valid_rows %}
                                         <tr>
                                             {% for cell in row %}
                                                 <td>
-                                                    {% if forloop.last %}
+                                                    {% if forloop.counter == 5 %}
                                                         {% if cell %}
                                                             {% include "icons/close.svg" %}
                                                             {{ cell }}
                                                         {% else %}
                                                             {% include "icons/checkmark.svg" %}
                                                         {% endif %}
+                                                    {% elif forloop.counter == 6 %}
+                                                        {% if cell %}
+                                                            {% include "icons/checkmark.svg" %}
+                                                        {% else %}
+                                                            {% include "icons/close.svg" %}
+                                                        {% endif %}
                                                     {% else %}
                                                         {% if cell %}
                                                             {{ cell }}
                                                         {% else %}
-                                                            -
+                                                            -{{ forloop.counter }}
                                                         {% endif %}
                                                     {% endif %}
                                                 </td>
@@ -86,20 +97,27 @@
                                     <button type="submit" name="aanmaken" value="ja" class="btn btn-action">
                                         <span class="nowrap">
                                             {% if form.cleaned_data.csv_file.valid_rows|length != form.cleaned_data.csv_file.all_rows|length %}
-                                                Alleen deze gebruiker
-                                                {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}s{% endif %}
-                                                aanmaken
+                                                Alleen deze
+                                                {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}
+                                                    gebruikers
+                                                {% else %}
+                                                    gebruiker
+                                                {% endif %}
+                                                aanmaken / aanpassen
                                             {% else %}
-                                                Gebruiker
-                                                {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}s{% endif %}
-                                                aanmaken
+                                                {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}
+                                                    Gebruikers
+                                                {% else %}
+                                                    Gebruiker
+                                                {% endif %}
+                                                aanmaken / aanpassen
                                             {% endif %}
                                         </span>
                                     </button>
                                 </div>
                             </div>
                         {% elif not form.errors %}
-                            <p>Er kunnen geen gebruikers worden aangemaakt met deze csv data</p>
+                            <p>Er kunnen geen gebruikers worden aangemaakt of aangepast met deze csv data</p>
                         {% endif %}
                         {% if not form.errors and form.cleaned_data.csv_file.valid_rows|length != form.cleaned_data.csv_file.all_rows|length %}
                             <p>
@@ -118,22 +136,24 @@
                                         {% if row.4 %}
                                             <tr>
                                                 {% for cell in row %}
-                                                    <td>
-                                                        {% if forloop.last %}
-                                                            {% if cell %}
-                                                                {% include "icons/close.svg" %}
-                                                                {{ cell }}
+                                                    {% if forloop.counter <= 5 %}
+                                                        <td>
+                                                            {% if forloop.last %}
+                                                                {% if cell %}
+                                                                    {% include "icons/close.svg" %}
+                                                                    {{ cell }}
+                                                                {% else %}
+                                                                    {% include "icons/checkmark.svg" %}
+                                                                {% endif %}
                                                             {% else %}
-                                                                {% include "icons/checkmark.svg" %}
+                                                                {% if cell %}
+                                                                    {{ cell }}
+                                                                {% else %}
+                                                                    -
+                                                                {% endif %}
                                                             {% endif %}
-                                                        {% else %}
-                                                            {% if cell %}
-                                                                {{ cell }}
-                                                            {% else %}
-                                                                -
-                                                            {% endif %}
-                                                        {% endif %}
-                                                    </td>
+                                                        </td>
+                                                    {% endif %}
                                                 {% endfor %}
                                             </tr>
                                         {% endif %}
@@ -167,14 +187,18 @@
             <div>
                 <h2>Gelukt!</h2>
                 <p>
-                    Onderstaande gebruiker
-                    {% if aangemaakte_gebruikers|length > 1 %}s{% endif %}
+                    Onderstaande
+                    {% if aangemaakte_gebruikers|length > 1 %}
+                        gebruikers
+                    {% else %}
+                        gebruiker
+                    {% endif %}
                     {% if aangemaakte_gebruikers|length > 1 %}
                         zijn
                     {% else %}
                         is
                     {% endif %}
-                    aangemaakt
+                    aangemaakt of aangepast
                 </p>
             </div>
             <ul>
@@ -184,7 +208,7 @@
                     </li>
                 {% endfor %}
             </ul>
-            <a href="{% url 'gebruiker_bulk_import' %}">Nog meer gebruikers aanmaken</a>
+            <a href="{% url 'gebruiker_bulk_import' %}">Nog meer gebruikers aanmaken of aanpassen</a>
             <br>
             <a href="{% url 'beheer' %}">Beheer</a>
         {% endif %}
