--- a/app/frontend/assets/styles/components/_page-beheer.scss
+++ b/app/frontend/assets/styles/components/_page-beheer.scss
@@ -74,6 +74,18 @@
             padding-left: 0.5rem;
             padding-right: 0.5rem;
         }
+        .close {
+            path {
+                fill: $danger;
+            }
+        }
+        .checkmark {
+            width: 20px;
+            height: 20px;
+            path {
+                fill: $primary;
+            }
+        }
     }
 
     form {
